# Mashcima2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: introduction.md  scene.md  tutorial.md
jupyter/: README.ipynb  mayer2021.ipynb  test-demo.ipynb  test.ipynb
jupyter/assets/: README.ipynb
jupyter/demos/: README.ipynb  test-demo.ipynb
jupyter/dev/: base_handwritten_model.ipynb  mayer2021.ipynb  mxl_loader.ipynb
jupyter/layout_synthesis/: beams.ipynb  beams.musicxml  duration_dots.ipynb  duration_dots.musicxml  flags.musicxml  ledger_lines copy.ipynb  ledger_lines.ipynb  ledger_lines.musicxml  notehead_placement.ipynb  notehead_placement.musicxml  rests.ipynb  rests.musicxml  stems.ipynb  stems.musicxml
jupyter/muscima_pp/: assets.ipynb  glyphs.ipynb
jupyter/rendering/: bitmap_rendering.ipynb
mashcima/: Geometry.py  Rectangle.py  SceneImage.py  ScenePoint.py  __init__.py  model_decorator.py
mashcima/prototyping/: MnistDigitModel.py  __main__.py
mashcima2/: __main__.py  config.py
mashcima2/assets/: AssetBundle.py  AssetRepository.py
mashcima2/geometry/: Point.py  Quad.py  Rectangle.py  Transform.py  Vector2.py
mashcima2/jupyter/: display_glyphs.py  display_scene_graph.py
mashcima2/loading/: MusicXmlLoader.py
mashcima2/orchestration/: BaseHandwrittenModel.py  Callback.py  CallbackTrigger.py  Container.py  Mayer2021Model.py  Model.py
mashcima2/rendering/: BitmapRenderer.py  DebugGlyphRenderer.py  traverse_sprites.py
mashcima2/scene/: AffineSpace.py  Group.py  Scene.py  SceneObject.py  ScenePoint.py  Sprite.py  ViewBox.py  new_data_model_sketch.py
mashcima_first_iteration/: Model.py  README.md  SceneObject.py  Space.py
mashcima_first_iteration/prototyping/: README.md
smashcima/: __main__.py  config.py  nameof_via_dummy.py  random_between.py
smashcima/assets/: AssetBundle.py  AssetRepository.py  download_file.py
smashcima/geometry/: Polygon.py  Rectangle.py  Transform.py  units.py
smashcima/jupyter/: display_glyphs.py  display_scene_graph.py
testing/: .gitignore  input.mscz  input.musicxml
(+134 files in other folders)
